css/_navigation.scss
/* NAVIGATION */

#main-nav {
  background: $color-white;
  height: 13rem;
  padding-top: 3rem;

  @media screen and (max-width: $breakpoint-md) {
    padding-top: 0;
    height: auto;
    padding: 0 1rem;
  }

  [class*='col-'] {
    position: static;
  }

  &.p-fixed {
    top: 0;
    left: 0;
    z-index: 999;
    width: 100%;
    transition: all 0.3s;

    &:hover {
      background: $color-black;
    }
  }

  .logo {
    display: flex;
    align-items: center;
    align-self: center;
    height: 10.5rem;

    h1 {
      margin: 0;
      line-height: 0;
    }
  }

  nav {
    display: flex;
    align-items: center;
    justify-content: flex-end;
    align-self: center;
    height: 100%;

    .nav-btn {
      cursor: pointer;
      color: $color-black;

      @media screen and (min-width: $breakpoint-md) {
        display: none;
      }

      .icon {
        span {
          background-color: $color-black;
        }
      }
    }

    .nav-list {
      @media screen and (min-width: $breakpoint-md) {
        ul {
          margin: 0;
          padding: 0;

          li {
            display: inline-block;

            a {
              color: $color-black;
              text-transform: uppercase;
              font-family: $font-normal;
              font-size: 1.8rem;
              font-weight: normal;
              text-decoration: none;
              padding: 2rem 0 1rem;
              margin: 0 1.6rem;
              border-bottom: 2px solid transparent;

              i {
                vertical-align: middle;
              }

              &.active {
                border-bottom: 2px solid $color-primary;
              }

              &:hover {
                border-bottom: 2px solid $color-primary;
              }
            }

            ul {
              display: none;
              position: absolute;
              background: $color-yellow;
              z-index: 99;
              right: 0;
              top: 10.5rem;
              width: 100%;
              text-align: center;
            }

            &:hover {
              background: white;

              a {
                color: $color-black;
              }

              ul {
                display: block;

                li {
                  &:hover {
                    background: transparent;

                    a {
                      text-decoration: underline;
                    }
                  }
                }
              }
            }
          }
        }
      }

      @media screen and (max-width: $breakpoint-md) {
        position: fixed;
        z-index: 999999;
        top: 0;
        left: 0;
        width: 100vw;
        height: 100vh;
        background: rgba($color-primary, 0.95);

        &:not(.open) {
          transform: translate(-100%, 0);
        }

        ul {
          li {
            list-style-type: none;
            transition: all 0.6s ease;
            opacity: 0;

            $step: 140;
            $left: 100;

            @for $i from 1 through 20 {
              &:nth-child(#{$i}) {
                left: -($left) + px;
              }

              $left: $left + $step;
            }
          }
        }

        &.open {
          & ~ .nav-btn {
            z-index: 999999;

            .icon {
              span {
                background-color: $color-white;
              }
            }
          }

          ul li {
            opacity: 1;
            left: 0;
          }
        }

        ul {
          height: 100%;
          margin-top: 35%;
          padding: 0;

          li {
            position: relative;
            text-align: center;

            a {
              display: inline-block;
              padding: 3rem 2rem;
              text-decoration: none;

              font-family: $font-bold;
              font-weight: normal;
              font-size: 4.1rem;
              color: $color-white;

              &:hover {
                color: $color-orange;
              }
            }
          }
        }
      }
    }
  }
}

body {
  &.nav-toggled {
    @media screen and (max-width: $breakpoint-md) {
      overflow: hidden !important;
    }
  }
}

